Updating gecevar presentation.

--- a/gecevar-functionalities/doc_prefix.tex
+++ b/gecevar-functionalities/doc_prefix.tex
@@ -14,7 +14,7 @@
     \vspace{0.5cm}
     \includegraphics[width=10cm]{figs/Banniere}\\
     \vspace{0.3cm}
-    \small{Jeanne CLEMENT$^{1}$\hspace{0.25cm}Ghislain VIEILLEDENT$^{1}$}\\
+    \small{Jeanne CLEMENT$^{1}$\hspace{0.25cm}Pierre GUILLAUMONT$^{1}$\hspace{0.25cm}Ghislain VIEILLEDENT$^{1}$}\\
     \vspace{0.15cm}
     {\scriptsize
       \begin{tabular}{l}
@@ -32,7 +32,7 @@
 
 \placelogotrue
 \begin{frame}
-  \frametitle{Plan}
+  \frametitle{Outline}
   \begin{columns}[c]
     \begin{column}{0.5\textwidth}
       \tableofcontents[sections=1]
@@ -47,3 +47,5 @@
   \end{columns}
 \end{frame}
 \placelogofalse
+
+
