--- a/gecevar-functionalities/header.org
+++ b/gecevar-functionalities/header.org
@@ -35,7 +35,7 @@
 #+BEAMER_HEADER: \AtBeginSection[]{
 #+BEAMER_HEADER: \placelogotrue
 #+BEAMER_HEADER:   \begin{frame}
-#+BEAMER_HEADER:     \frametitle{Plan}
+#+BEAMER_HEADER:     \frametitle{Outline}
 #+BEAMER_HEADER:     \begin{columns}[c]
 #+BEAMER_HEADER:       \begin{column}{0.5\textwidth}
 #+BEAMER_HEADER:         \tableofcontents[sections=1,currentsection]
@@ -64,3 +64,4 @@
 #+BEAMER_HEADER: % Disable monospaced font for URLs
 #+BEAMER_HEADER: \urlstyle{same}
 #+BEAMER_HEADER:
+
